app/packages/pocket_tts_raven/third_party/raven/include/pocket_tts.h

/* Request a graceful abort; generation stops within one decode batch.
 * Does not join or free — follow with ptt_stream_end.                   */
void ptt_stream_stop(void* stream_ctx);
/* Join and free the stream context (aborts first if still running).    */
void ptt_stream_end(void* stream_ctx);
void ptt_free_audio(float* samples);
/* ── Latent streaming (split-pipeline embedders) ───────────────────────
 * AR side only: emits raw 32-float latent frames instead of audio, for
 * consumers that run the Mimi decoder elsewhere (see ptt_decode).       */

void* ptt_latents_start(void* handle, const char* text, const char* voice);
/* 1 = wrote a frame into out_frame[32] (or a boundary marker: flags
 * bit0 = chunk boundary, bit1 = terminal sentence, bit2 = last),
 * 0 = finished, -1 = nothing available yet (non-blocking).              */
int ptt_latents_poll(void* latents_ctx, float* out_frame, int* out_flags);
void ptt_latents_stop(void* latents_ctx);
void ptt_latents_end(void* latents_ctx);
/* Synchronous decode for decoder_only engines: latents[frames*32] in,
 * malloc'd samples out (free with ptt_free_audio). Decoder state
 * persists across calls until ptt_decoder_reset. Returns 0 / -1.        */
int ptt_decode(void* handle, const float* latents, int frames,
               float** out_samples, int* out_len);
void ptt_decoder_reset(void* handle);
/* ── Voice encoding ────────────────────────────────────────────────────── */

/* defer_encoder engines: load the encoder session once the model file
 * exists in models_dir. Returns 0 / -1.                                 */
int ptt_load_encoder(void* handle);
/* Encode a voice file to its cached .emb (voices_dir/.cache/<name>.emb).
 * Works on encoder_only engines. Returns 0 / -1.                        */
int ptt_encode_voice(void* handle, const char* voice);
/* ── Diagnostics ───────────────────────────────────────────────────────── */

void ptt_set_profiling(int enabled);
void ptt_print_profile(void);
/* Isolated component timing: which 0 = decoder chunk of `frames`,
 * 1 = AR step. Returns average ms per run, or -1.                       */
double ptt_debug_bench(void* handle, int which, int frames, int iters);