app/packages/pocket_tts_raven/lib/pocket_tts_raven_bindings_generated.dart


  late final _ptt_stream_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_stream_stop',
      );
  late final _ptt_stream_stop = _ptt_stream_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Join and free the stream context (aborts first if still running).
  void ptt_stream_end(ffi.Pointer<ffi.Void> stream_ctx) {
    return _ptt_stream_end(stream_ctx);
  }

  late final _ptt_stream_endPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_stream_end',
      );
  late final _ptt_stream_end = _ptt_stream_endPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ptt_free_audio(ffi.Pointer<ffi.Float> samples) {
    return _ptt_free_audio(samples);
  }

  late final _ptt_free_audioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Float>)>>(
        'ptt_free_audio',
      );
  late final _ptt_free_audio = _ptt_free_audioPtr
      .asFunction<void Function(ffi.Pointer<ffi.Float>)>();

  /// ── Latent streaming (split-pipeline embedders) ───────────────────────
  /// AR side only: emits raw 32-float latent frames instead of audio, for
  /// consumers that run the Mimi decoder elsewhere (see ptt_decode).
  ffi.Pointer<ffi.Void> ptt_latents_start(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> voice,
  ) {
    return _ptt_latents_start(handle, text, voice);
  }

  late final _ptt_latents_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ptt_latents_start');
  late final _ptt_latents_start = _ptt_latents_startPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// 1 = wrote a frame into out_frame[32] (or a boundary marker: flags
  /// bit0 = chunk boundary, bit1 = terminal sentence, bit2 = last),
  /// 0 = finished, -1 = nothing available yet (non-blocking).
  int ptt_latents_poll(
    ffi.Pointer<ffi.Void> latents_ctx,
    ffi.Pointer<ffi.Float> out_frame,
    ffi.Pointer<ffi.Int> out_flags,
  ) {
    return _ptt_latents_poll(latents_ctx, out_frame, out_flags);
  }

  late final _ptt_latents_pollPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('ptt_latents_poll');
  late final _ptt_latents_poll = _ptt_latents_pollPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  void ptt_latents_stop(ffi.Pointer<ffi.Void> latents_ctx) {
    return _ptt_latents_stop(latents_ctx);
  }

  late final _ptt_latents_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_latents_stop',
      );
  late final _ptt_latents_stop = _ptt_latents_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ptt_latents_end(ffi.Pointer<ffi.Void> latents_ctx) {
    return _ptt_latents_end(latents_ctx);
  }

  late final _ptt_latents_endPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_latents_end',
      );
  late final _ptt_latents_end = _ptt_latents_endPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Synchronous decode for decoder_only engines: latents[frames*32] in,
  /// malloc'd samples out (free with ptt_free_audio). Decoder state
  /// persists across calls until ptt_decoder_reset. Returns 0 / -1.
  int ptt_decode(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Float> latents,
    int frames,
    ffi.Pointer<ffi.Pointer<ffi.Float>> out_samples,
    ffi.Pointer<ffi.Int> out_len,
  ) {
    return _ptt_decode(handle, latents, frames, out_samples, out_len);
  }

  late final _ptt_decodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
            ffi.Pointer<ffi.Pointer<ffi.Float>>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('ptt_decode');
  late final _ptt_decode = _ptt_decodePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Float>>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  void ptt_decoder_reset(ffi.Pointer<ffi.Void> handle) {
    return _ptt_decoder_reset(handle);
  }

  late final _ptt_decoder_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_decoder_reset',
      );
  late final _ptt_decoder_reset = _ptt_decoder_resetPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// defer_encoder engines: load the encoder session once the model file
  /// exists in models_dir. Returns 0 / -1.
  int ptt_load_encoder(ffi.Pointer<ffi.Void> handle) {
    return _ptt_load_encoder(handle);
  }

  late final _ptt_load_encoderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_load_encoder',
      );
  late final _ptt_load_encoder = _ptt_load_encoderPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Encode a voice file to its cached .emb (voices_dir/.cache/<name>.emb).
  /// Works on encoder_only engines. Returns 0 / -1.
  int ptt_encode_voice(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> voice,
  ) {
    return _ptt_encode_voice(handle, voice);
  }

  late final _ptt_encode_voicePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('ptt_encode_voice');
  late final _ptt_encode_voice = _ptt_encode_voicePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  /// ── Diagnostics ─────────────────────────────────────────────────────────
  void ptt_set_profiling(int enabled) {
    return _ptt_set_profiling(enabled);
  }

  late final _ptt_set_profilingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'ptt_set_profiling',
      );
  late final _ptt_set_profiling = _ptt_set_profilingPtr
      .asFunction<void Function(int)>();

  void ptt_print_profile() {
    return _ptt_print_profile();
  }

  late final _ptt_print_profilePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('ptt_print_profile');
  late final _ptt_print_profile = _ptt_print_profilePtr
      .asFunction<void Function()>();

  /// Isolated component timing: which 0 = decoder chunk of `frames`,
  /// 1 = AR step. Returns average ms per run, or -1.
  double ptt_debug_bench(
    ffi.Pointer<ffi.Void> handle,
    int which,
    int frames,
    int iters,
  ) {
    return _ptt_debug_bench(handle, which, frames, iters);
  }

  late final _ptt_debug_benchPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int, ffi.Int)
        >
      >('ptt_debug_bench');
  late final _ptt_debug_bench = _ptt_debug_benchPtr
      .asFunction<double Function(ffi.Pointer<ffi.Void>, int, int, int)>();
}
